# dados-unicamp

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt  teste.py
capes/: configuration.yaml
capes/cleaning/: __main__.py  clean.py  cleaning_functions.py  new.py
capes/extract/: __main__.py  merge.py
capes/utilities/: capes_information.py  io.py  logging.py
comvest/: README.md  assign_ids.py
comvest/assign_ids/: __main__.py  comvest_ids.py
comvest/auxiliares/: merge_dfs.py
comvest/bases finais/: get_ids.py
comvest/clear_dados/: __main__.py  cod_ibge.py  cod_inep.py  ids_nomes.py  limpeza_dados.py  validacao_esc.py  validacao_mun.py
comvest/clear_notas/: __main__.py  limpeza_notas.py  presenca.py
comvest/clear_perfil/: __main__.py  limpeza_perfil.py  limpeza_questoes.py  (+1 more)
dac/: README.md  configuration.yaml  configuration_example.yaml  dac_files.yaml  dac_flowchart.md  todolist.todo
empresa/: __main__.py  configuration.yaml  extract.py  utils.py
enem/: clean_comvest.py  comvest_enem.py  divide_comvest.py  retrieve_enem.py  retrieve_ids.py
estabelecimento/: __main__.py  configuration.yaml  extract.py  utils.py
filters/: filters.py
fuvest/: configuration.yaml
input/: README.md
output/: README.md  id.py  teste.py
rais/: README.md  __main__.py  configuration.yaml  flowchart.md  main.py
simples/: __main__.py  configuration.yaml  extract.py  utils.py
socio/: README.md  configuration.yaml  main.py  requirements.txt
unesp/: configuration.yaml
utilities/: cleaning_utils.py  compare_data.py
(+194 files in other folders)
