[project]
name = "dados-unicamp"
version = "0.1.0"
description = "Pipelines de processamento e integração de bases acadêmicas relacionadas à Unicamp"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "swifter>=1.4.0",
    "textdistance>=4.6.0",
    "tqdm>=4.66.0",
    "unidecode>=1.3.0",
]

[tool.uv]
package = false